# WebSocketServer

./: .gitignore  README.md
.github/workflows/: README-RELEASE.md  dotnet-core.yml  publish-registry.yml  release-clients.yml  release-nuget.yml
Cyaim.WebSocketServer/: Cyaim.WebSocketServer.sln
Cyaim.WebSocketServer/Clients/: .gitignore  GITIGNORE_README.md  README.md  RELEASE.md
Cyaim.WebSocketServer/Clients/cyaim-websocket-client-rs/: .gitignore  Cargo.toml  README.md  VERIFY.md
Cyaim.WebSocketServer/Clients/cyaim-websocket-client-rs/examples/: verify.rs
Cyaim.WebSocketServer/Clients/cyaim-websocket-client-rs/src/: client.rs  factory.rs  lib.rs  options.rs  types.rs
Cyaim.WebSocketServer/Cyaim.WebSocketServer.Client/: Cyaim.WebSocketServer.Client.csproj
Cyaim.WebSocketServer/Cyaim.WebSocketServer.Cluster.FreeRedis/: Cyaim.WebSocketServer.Cluster.FreeRedis.csproj  FreeRedisClusterTransport.cs  FreeRedisClusterTransportFactory.cs
Cyaim.WebSocketServer/Cyaim.WebSocketServer.Cluster.Hybrid/: Cyaim.WebSocketServer.Cluster.Hybrid.csproj  HybridClusterTransport.cs  HybridClusterTransportFactory.cs  LoadBalancer.cs  NodeInfo.cs  README.md  RedisNodeDiscoveryService.cs
Cyaim.WebSocketServer/Cyaim.WebSocketServer.Cluster.Hybrid.Implementations/: Cyaim.WebSocketServer.Cluster.Hybrid.Implementations.csproj  FreeRedisService.cs  StackExchangeRedisService.cs
Cyaim.WebSocketServer/Cyaim.WebSocketServer.Cluster.RabbitMQ/: Cyaim.WebSocketServer.Cluster.RabbitMQ.csproj  RabbitMQClusterTransport.cs  RabbitMQClusterTransportFactory.cs
(+421 files in other folders)
